# recallapp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/recall_core/: __about__.py  __init__.py  exceptions.py
src/recall_core/config/: __init__.py  settings.py
src/recall_core/embeddings/: __init__.py  anthropic.py  base.py  factory.py  ollama.py  openai.py
src/recall_core/storage/: __init__.py  conversation.py  models.py  vector.py
tests/: __init__.py  conftest.py
tests/test_config/: test_settings.py
tests/test_embeddings/: test_factory.py  test_ollama.py
tests/test_storage/: test_conversation.py  test_vector.py
