[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recall-core"
dynamic = ["version"]
description = "Core library for RecallApp - developer companion for preserving context and protecting stability"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Destined.AI" }
]
keywords = ["ai", "embeddings", "vector-search", "developer-tools", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "lancedb>=0.15",
    "pyarrow>=14.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
anthropic = ["voyageai>=0.3"]
openai = ["openai>=1.0"]
all = [
    "recall-core[anthropic,openai]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "respx>=0.21",
]

[project.urls]
Documentation = "https://github.com/Destined-AI/recallapp#readme"
Issues = "https://github.com/Destined-AI/recallapp/issues"
Source = "https://github.com/Destined-AI/recallapp"

[tool.hatch.version]
path = "src/recall_core/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/recall_core"]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=src/recall_core --cov-report=term-missing {args:tests}"
lint = "ruff check src tests"
format = "ruff format src tests"
typecheck = "mypy src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "TCH"]
ignore = [
    "E501",   # Line length handled by formatter
    "B027",   # Empty method in ABC without abstract decorator (intentional default impl)
    "B905",   # zip() without strict= (we validate lengths ourselves)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "lancedb.*",
    "pyarrow.*",
    "voyageai.*",
    "openai.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"
